--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router": "^7.1.1",
+    "react-router-dom": "^7.1.1",
     "recharts": "^2.15.0"
   },
   "devDependencies": {
@@ -30,6 +31,6 @@
     "globals": "^15.14.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
-    "vite": "^6.0.5"
+    "vite": "^6.0.7"
   }
 }
